force-app/main/default/objects/Workflow_Task__c/Workflow_Task__c.object-meta.xml
<CustomObject>
    <label>Workflow Task</label>
    <nameField>
        <label>Workflow Task  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflow Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>