force-app/main/default/objects/Workflow_Task__c/fields/Default_queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Default_queue_ID__c</fullName>
    <label>Default queue ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>