force-app/main/default/objects/Workflow_Task__c/fields/Don_t_Restrict_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Don_t_Restrict_Assignment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Don&apos;t Restrict Assignment</label>
    <type>Checkbox</type>
</CustomField>