force-app/main/default/objects/Workflow_Task__c/fields/Is_First_Task__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is First Task</label>
    <type>Checkbox</type>
</CustomField>