force-app/main/default/objects/Workflow_Task__c/fields/Parent_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Parent_Workflow__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Parent Workflow</label>
    <referenceTo>Workflow__c</referenceTo>
    <relationshipLabel>Workflow Tasks</relationshipLabel>
    <relationshipName>Workflow_Tasks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>