force-app/main/default/objects/Workflow_Task__c/fields/Reassign_Task_when_Case_owner_Change__c.field-meta.xml
<CustomField>
    <fullName>Reassign_Task_when_Case_owner_Change__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Reassign Task when Case owner Change</label>
    <type>Checkbox</type>
</CustomField>